[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/level/GameHandler.gd" type="Script" id=1]
[ext_resource path="res://objects/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/level/TurretSpawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/labelled/Hook.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D" groups=[
"turret_listener",
"turret_spawn_listener",
]]
script = ExtResource( 1 )

[node name="Turrets" type="Node" parent="."]

[node name="Hooks" type="Node" parent="."]

[node name="Hook9" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 794.146, 296.112 )

[node name="Hook" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 85.3786, 291.356 )

[node name="Hook2" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 286.355, 105.839 )

[node name="Hook3" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 787.011, 91.569 )

[node name="Hook4" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 791.768, 508.981 )

[node name="Hook5" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 286.355, 489.953 )

[node name="Hook6" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 532.521, 215.246 )

[node name="Hook7" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 525.385, 400.763 )

[node name="Hook8" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 280.409, 288.977 )

[node name="Hook10" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 941.608, 298.491 )

[node name="Hook11" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 523.324, 569.143 )

[node name="Hook12" parent="Hooks" instance=ExtResource( 4 )]
position = Vector2( 525.702, 39.9461 )

[node name="Obstacles" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 531.744, 291.328 )

[node name="TurretTimer" type="Timer" parent="."]
one_shot = true

[node name="RelabelTimer" type="Timer" parent="."]
one_shot = true

[node name="DifficultyTimer" type="Timer" parent="."]
one_shot = true

[node name="TurretSpawn" parent="." instance=ExtResource( 3 )]
position = Vector2( 529.799, 142.243 )

[node name="TurretSpawn2" parent="." instance=ExtResource( 3 )]
position = Vector2( 424.346, 289.075 )

[node name="TurretSpawn3" parent="." instance=ExtResource( 3 )]
position = Vector2( 125.342, 131.564 )

[node name="TurretSpawn4" parent="." instance=ExtResource( 3 )]
position = Vector2( 125.342, 506.654 )

[node name="TurretSpawn5" parent="." instance=ExtResource( 3 )]
position = Vector2( 935.59, 505.319 )

[node name="TurretSpawn6" parent="." instance=ExtResource( 3 )]
position = Vector2( 942.264, 139.573 )

[node name="TurretSpawn7" parent="." instance=ExtResource( 3 )]
position = Vector2( 668.622, 297.084 )

[node name="TurretSpawn8" parent="." instance=ExtResource( 3 )]
position = Vector2( 525.794, 520.002 )
